Changelog
=========

1.1 (unreleased)
----------------

- Change the label and description for the example theme to supply useful
  information.
  [smcmahon]

- Upgrades from 1.0 get the combined "Theming" control panel that was added in
  1.1a1.
  [danjacka]


1.1b2 (2013-01-01)
------------------

- Ensure host blacklist utilises SERVER_URL to correctly determine hostname
  for sites hosted as sub-folders at any depth.
  [davidjb]

- Add test about plone.app.theming / plone.app.caching integration when
  using GZIP compression for anonymous
  (see ticket `12038 <https://dev.plone.org/ticket/12038>`_). [ebrehault]


1.1b1 (2012-10-16)
------------------

- Add diazo.debug option, route all error_log output through
  this so debugging can be displayed
  [lentinj]

- Make example Bootstrap-based theme use the HTML5 DOCTYPE.
  [danjacka]

- Demote ZMI patch log message to debug level.
  [hannosch]

- Upgrade to ACE 1.0 via plone.resourceeditor
  [optilude]

- Put quotes around jQuery attribute selector values to appease
  jQuery 1.7.2.
  [danjacka]

1.1a2 (2012-08-30)
------------------

- Protect the control panel with a specific permission so it can be
  delegated.
  [davisagli]

- Advise defining ajax_load as ``request.form.get('ajax_load')`` in
  manifest.cfg.  For instance, the login_form has an hidden empty
  ajax_load input, which would give an unthemed page after submitting
  the form.
  [maurits]

- Change theme editor page templates to use main_template rather than
  prefs_main_template to avoid inserting CSS and JavaScript too early
  under plonetheme.classic.
  [danjacka]

1.1a1 (2012-08-08)
------------------

- Replace the stock "Themes" control panel with a renamed "Theming" control
  panel, which incorporates the former's settings under its "Advanced" tab.
  [optilude]

- Add a full in-Plone theme authoring environment
  [optilude, vangheem]

- Update IBeforeTraverseEvent import to zope.traversing.
  [hannosch]
